# quartzo

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  package-lock.json  package.json  screenshot.mjs  vite.config.js
docs/: GUIA.md  INTEGRATION.md  MOBILE-ANDROID.md  PROXIMAS-FEATURES.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  docx.rs  google_drive.rs  lib.rs
src/lib/: backlink-cache.ts  color.ts  commands.ts  export.ts  frontmatter.ts  fuzzy.ts  git-auto.ts  google-config.ts  google-drive-mobile.ts  google-drive.ts  hover-preview.ts  i18n-dict.ts  i18n.ts  platform.ts  query.ts  sfx.ts  tab-persist.ts  tokens.ts  types-notes.ts  types.ts  updates.ts  vault-actions.ts  video.ts
src/lib/components/canvas/: CanvasView.svelte  CardNode.svelte  ImageNode.svelte  SwatchNode.svelte
src/lib/components/editor/: CodeMirror.svelte  EditorTabs.svelte  MarkdownEditor.svelte  MarkdownPreview.svelte  PaneEditor.svelte  PropertiesPanel.svelte  VideoReview.svelte
src/lib/components/graph/: Graph3D.svelte  GraphCanvas.svelte  GraphFocus.svelte  GraphNode.svelte  GraphNotePeek.svelte  GraphView.svelte  RegionNode.svelte  SynapseEdge.svelte  context.ts
src/lib/components/layout/: BacklinksPane.svelte  FileTree.svelte  GitPane.svelte  MobileShell.svelte  OutlinePane.svelte  QuickSave.svelte  Sidebar.svelte  TitleBar.svelte  WelcomeScreen.svelte
src/lib/mobile/: BottomSheet.svelte  MobileDrawer.svelte  MobileEditor.svelte  MobileHome.svelte  MobileNoteList.svelte  MobileScreen.svelte  MobileSearch.svelte
src/lib/stores/: aliases.ts  coachmarks.ts  editor.ts  explorerSort.ts  gitsync.ts  graph.ts  nav.ts  settings.ts  tabs.ts  toast.ts  ui.ts  vault.ts
src/lib/utils/: debounce.ts
src/routes/: +layout.svelte  +page.svelte
(+24 files in other folders)
