[package]
name = "lumina"
version = "0.65.1"
description = "Quartzo"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumina_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
notify = "8.2.0"
# Deep link quartzo:// (PRISMA/qualquer app abre uma nota).
tauri-plugin-deep-link = "2"
# Exportador DOCX nativo (gerado pelo próprio app — sem ferramentas externas).
zip = { version = "2", default-features = false, features = ["deflate"] }
pulldown-cmark = { version = "0.12", default-features = false }

# Dependências só de desktop (não compilam/servem no Android/iOS):
# - single-instance: plugin desktop-only
# - trash: a Lixeira não existe no Android
# - rusqlite: o PRISMA (DAM) é 100% desktop
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
trash = "5.2.6"
rusqlite = { version = "0.32", features = ["bundled"] }
# Sincronia Google Drive (DESKTOP por enquanto): loopback OAuth (PKCE) + Picker.
# Android (deep link) fica pra fase 2 — por isso gated em desktop.
tiny_http = "0.12"
ureq = { version = "2", features = ["json", "tls"] }
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"
